--- a/microservice-eureka/src/main/resources/application.yml
+++ b/microservice-eureka/src/main/resources/application.yml
@@ -1,17 +1,6 @@
-server:
-  port: 8761
-
+#Se hiso modificaciones despues de agregar el contenido a mi msvc-config/configurations
 spring:
   application:
     name: msvc-eureka
   config:
     import: optional:configserver:http://localhost:8888 #Agregado, ya que el msvc-config no esta configurado
-
-eureka:
-  instance:
-    hostname: localhost
-  client:
-    register-with-eureka: false
-    fetch-registry: false
-    server-url:
-      defaultZone: http://localhost:${server.port}/eureka/
