--- a/microservice-gateway/src/main/resources/application.yml
+++ b/microservice-gateway/src/main/resources/application.yml
@@ -1,24 +1,8 @@
-server:
-  port: 8080
-
+##Se hiso modificaciones despues de agregar el contenido a mi msvc-config/configurations
 spring:
-  config:
-    import: optional:configserver:http://localhost:8888 #Agregado, ya que el msvc-config no esta configurado
   application:
     name: msvc-gateway
-  cloud:
-    gateway:
-      mvc:
-        discovery:
-          locator:
-            enabled: true
-        routes:
-          - id: students
-            uri: http://localhost:8090
-            predicates:
-              - Path=/api/student/**
-          - id: courses
-            uri: http://localhost:9090
-            predicates:
-              - Path=/api/course/**
+  config:
+    import: optional:configserver:http://localhost:8888 #Agregado, ya que el msvc-config no esta configurado
+
 
